--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 body {
@@ -20,7 +21,10 @@ body {
   height: 70px;
   margin: 20px;
 }
-
+.menu__logo {
+  width: 150px;
+  height: 150px;
+}
 .menu__container {
   display: flex;
   justify-content: space-around;
@@ -104,277 +108,24 @@ body {
   font-size: 28px;
   border: 4px solid white;
 }
-#iconoCarrito {
-  background-color: #000;
-}
-/* TERMINA EL HEADER */
 
-/* comienzo body */
+/* Carrito */
 
-/* MODAL CARRITO
-.cartSection {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  backdrop-filter: blur(3px);
-  display: none;
-}
-
-.cartContainer {
-  position: absolute;
-  width: 100%;
-  max-width: 400px;
-  max-height: 900px;
-  background: #363636;
-  border-radius: 15px;
-  display: flex;
-  flex-direction: column;
-  backdrop-filter: blur(50px);
-  top: 1%;
-  right: 50px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: 2%;
-}
-.cartContainer > i {
-  cursor: pointer;
-  align-self: flex-end;
-  background: white;
-  color: #000000;
-  font-size: 15px;
-  width: 8%;
-  height: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10%;
-}
-.cartContainer h2 {
-  font-family: "Montserrat";
-  font-weight: 500;
-  font-size: 25px;
-  color: #ffffff;
-  align-self: flex-start;
-}
-
-.productsCartContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  width: 100%;
-  align-items: center;
-  justify-content: flex-start;
-  height: 100%;
-  min-height: 500px;
-  overflow-y: scroll;
-}
-
-.productsCartContainer::-webkit-scrollbar {
-  width: 5px;
-  background-color: #ff7a00;
-}
-.productsCartContainer::-webkit-scrollbar-thumb {
-  height: 5px;
-  background-color: #ff005c;
-}
-
-.productsCartCard {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  max-width: 310px;
-  max-height: 100px;
-  min-height: 100px;
-  display: flex;
-  background: #252525;
-  box-shadow: 0px 0px 50px rgba(1, 2, 7, 0.5);
-  border-radius: 15px;
-}
-
-.productsCartCard img {
-  border-radius: 16px;
-  width: 62px;
-  height: 62px;
-  object-fit: cover;
-}
-
-.productsCartCard h3 {
-  font-family: "Montserrat";
-  font-weight: 300;
-  font-size: clamp(10px, 1vw, 15px);
-  color: #ffffff;
-}
-
-.productsCartCard p {
-  font-weight: 300;
-  font-size: clamp(9px, 0.8vw, 14px);
-  color: #4d4d4d;
-}
-
-.productsCartCard h4 {
-  font-family: "Montserrat";
-  font-weight: 700;
-  font-size: clamp(14px, 1.3vw, 19px);
-  background: linear-gradient(90.81deg, #ffa100 -0.82%, #ff005c 50.53%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-}
-.recomendationsCard h3 {
-  font-family: "Montserrat";
-  font-weight: 300;
-  font-size: clamp(10px, 1vw, 15px);
-  color: #ffffff;
-}
-
-.recomendationsCard p {
-  font-weight: 300;
-  font-size: clamp(9px, 0.8vw, 14px);
-  color: #4d4d4d;
-}
-
-.recomendationsCard h4 {
-  font-family: "Montserrat";
-  font-weight: 700;
-  font-size: clamp(14px, 1.3vw, 19px);
-  background: linear-gradient(98.81deg, #ffa100 -0.82%, #ff005c 101.53%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-}
-
-.productsCartDatos {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.productsCartQuantityControler {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 15px;
-}
-
-.down {
-  width: 26px;
-  height: 26px;
-  border: none;
-  background: linear-gradient(
-    98.81deg,
-    #4e3c1c -0.82%,
-    #352812 -0.81%,
-    #3b0619 101.53%
-  );
-  border-radius: 8px;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-}
-
-.up {
-  width: 26px;
-  height: 26px;
-  border: none;
-  background: linear-gradient(
-    98.81deg,
-    #ffa100 -0.82%,
-    #ffa100 -0.81%,
-    #ff005c 101.53%
-  );
-  border-radius: 8px;
-  color: white;
-  cursor: pointer;
-}
-
-.shippingContainer {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  gap: 55%;
-}
-
-.shippingContainer h3 {
-  font-family: "Montserrat";
-  font-weight: 300;
-  font-size: 18px;
-  color: #ffffff;
-}
-
-.linea {
-  width: 98%;
-  background: #ffffff;
-  box-shadow: 0px 0px 50px rgba(1, 2, 7, 0.5);
-  border: none;
-  height: 0.2px;
-}
-
-.totalContainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 90%;
-}
-.totalContainer > h2 {
-  font-weight: 400;
-}
-.totalContainer > span {
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.shopContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  gap: 20px;
-}
-
-.shopContainer > button {
-  width: 60%;
-  height: 45px;
-  padding: 10px 30px;
-  margin-top: 15px;
-  color: #000000;
-  text-decoration: none;
-  background: #ffce00;
-  border-radius: 30px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  transition: 0.5s;
-  cursor: pointer;
-}
-
-.disabled {
-  background: #4d4d4d;
-} */
 .cart {
   position: absolute;
-  top: 65px;
+  top: 75px;
   right: 0;
   padding: 50px 30px;
-  background: linear-gradient(to top, #121e3c, var(--background));
-  border-left: 1px solid var(--nav-bg);
+  background: #252525;
+  border: 3px solid #0544f1;
   display: flex;
   flex-direction: column;
   gap: 30px;
   height: calc(100vh - 65px);
   overflow-y: scroll;
-  z-index: 2;
+  z-index: 3;
   min-width: 375px;
-  transform: translate(200%);
-  transition: all 0.5s cubic-bezier(0.92, 0.01, 0.35, 0.99);
+  border-radius: 8px;
 }
 
 .cart-container {
@@ -385,13 +136,19 @@ body {
 /*OCULTAR BARRA DE SCROLL DEL CARRITO*/
 
 .cart::-webkit-scrollbar {
-  display: none;
+  width: 5px;
+  background-color: black;
 }
 
+.cart::-webkit-scrollbar-thumb {
+  height: 5px;
+  background-color: white;
+}
 .cart h2 {
-  color: var(--text-white);
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 600;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .cart-item {
@@ -401,13 +158,13 @@ body {
   gap: 20px;
   background-color: #2323234e;
   padding: 20px;
-  border: 1px solid var(--electric);
+  border: 1px solid white;
   border-radius: 10px;
 }
 
 .cart-item img {
-  height: 65px;
-  width: 65px;
+  height: 75px;
+  width: 75px;
 }
 
 .item-info {
@@ -417,23 +174,22 @@ body {
 }
 
 .item-title {
-  color: var(--text-white);
   font-weight: 600;
-  font-size: 14px;
+  font-size: clamp(13px, 3vw, 18px);
 }
 
 .item-bid {
-  color: var(--text-gray);
+  color: whitesmoke;
   font-weight: 300;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .item-price {
-  background: linear-gradient(to right, #30cfd0, #c43ad6);
+  background: gold;
   background-clip: text;
   color: transparent;
   -webkit-background-clip: text;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 800;
 }
 
@@ -455,21 +211,20 @@ body {
 }
 
 .item-quantity {
-  color: var(--text-gray);
+  color: gold;
 }
 
 .up {
-  border: 1px solid var(--electric);
+  border: 1px solid gray;
 }
 
 .down {
-  background-color: var(--secondary);
-  border: 1px solid var(--electric);
+  border: 1px solid gray;
 }
 
 .divider {
   margin-top: 20px;
-  border: 0.5px solid var(--electric);
+  border: 0.5px solid white;
   width: 100%;
 }
 
@@ -481,25 +236,15 @@ body {
 }
 
 .cart-total p {
-  color: var(--text-white);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-weight: 700;
-}
-
-.cart-total span {
-  color: var(--text-white);
-  font-weight: 400;
   font-size: 18px;
 }
 
-/*Toggle del carro*/
-.open-cart {
-  transform: translate(0%);
-  transition: all 0.5s cubic-bezier(0.92, 0.01, 0.35, 0.99);
-}
-
-.empty-msg {
-  color: var(--text-gray);
-  font-size: 14px;
+.cart-total span {
+  font-weight: 400;
+  font-size: 20px;
 }
 
 /* FIN CARRITO */
@@ -516,35 +261,44 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  width: 800px;
 }
 .datoscontainer h2 {
-  font-size: 32px;
+  font-size: clamp(26px, 2vw, 32px);
 }
 .datoscontainer h1 {
-  font-size: 40px;
+  font-size: clamp(16px, 2vw, 40px);
 }
 
 .puntuacion {
   display: flex;
-  align-items: center;
-  gap: 15px;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
 }
 .puntuacion p {
-  font-size: 24px;
+  font-size: 26px;
 }
 .text_nike_air {
-  font-size: 24px;
+  font-size: clamp(20px, 1vw, 26px);
 }
+
 .size p {
   font-size: 22px;
 }
 /* puntuacion estrella  */
+.star-widget {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row-reverse;
+  align-items: center;
+  width: 100%;
+}
 .star-widget input {
   display: none;
 }
 .star-widget label {
-  font-size: 24px;
+  font-size: 26px;
   color: #444;
   padding: 10px;
   float: right;
@@ -657,7 +411,7 @@ input:not(:checked) ~ label:hover ~ label {
   justify-content: flex-start;
   gap: 20px;
   padding: 20px;
-  width: 400px;
+  width: 350px;
 }
 .sugerencias h2 {
   font-size: 32px;
@@ -704,6 +458,7 @@ input:not(:checked) ~ label:hover ~ label {
   gap: 20px;
   width: 100%;
   padding: 20px;
+  flex-wrap: wrap;
 }
 .container_hr button {
   background-color: #000;
@@ -713,6 +468,10 @@ input:not(:checked) ~ label:hover ~ label {
 .hr_line {
   width: 80vw;
 }
+.line_edit {
+  display: none;
+}
+
 button i {
   width: 40px;
   color: white;
@@ -737,7 +496,7 @@ button i {
   background: linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
   background-color: #6c7c7c;
 }
-.buttons:active {
+.buttons:cart-it {
   position: relative;
   top: 1px;
 }
@@ -752,18 +511,18 @@ button i {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .container-popu {
   position: relative;
-  display: flex;
-  gap: 40px;
+
   padding: 20px;
 }
 
 .container-popu .card {
   position: relative;
-  width: 300px;
+  width: 280px;
   height: 450px;
   background: #232323;
   border-radius: 20px;
@@ -823,8 +582,10 @@ button i {
 .container-popu .card .contentBx {
   position: absolute;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  gap: 27px;
+  gap: 8px;
   bottom: 0;
   width: 100%;
   height: 100px;
@@ -901,13 +662,14 @@ button i {
   justify-content: center;
   align-items: center;
   padding: 100px;
+  flex-wrap: wrap;
 }
 
 .card-available {
   position: relative;
   width: 320px;
   height: 480px;
-  background: #191919;
+  background: #ffce00;
   border-radius: 20px;
   overflow: hidden;
 }
@@ -915,16 +677,18 @@ button i {
 .card-available::before {
   content: "";
   position: absolute;
-  top: -50%;
+  top: 22%;
+  bottom: 0;
+  right: 0;
   width: 100%;
   height: 100%;
-  background: #ffce00;
+  background: #191919;
   transform: skewY(345deg);
   transition: 0.5s;
 }
 
 .card-available:hover::before {
-  top: -70%;
+  top: 100%;
   transform: skewY(390deg);
 }
 
@@ -935,7 +699,7 @@ button i {
   left: 0;
   font-weight: 600;
   font-size: 6em;
-  color: rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.2);
 }
 
 .card-available .imgBox {
@@ -944,12 +708,13 @@ button i {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 20px;
   z-index: 1;
 }
 
 .card-available .contentBox {
   position: relative;
+  display: flex;
+  gap: 11px;
   padding: 20px;
   display: flex;
   justify-content: center;
@@ -961,7 +726,7 @@ button i {
 .card-available .contentBox h3 {
   font-size: 18px;
   color: white;
-  font-weight: 500;
+  font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
@@ -995,9 +760,13 @@ button i {
 
 .zapas {
   height: 300px;
-  width: auto;
+  width: 300px;
 }
-.text_title {
+.text_title1 {
+  margin: 70px;
+  font-size: 40px;
+}
+.text_title2 {
   margin: 70px;
   font-size: 40px;
 }
@@ -1053,25 +822,31 @@ button i {
 .btn-delete {
   cursor: pointer;
   padding: 10px 35px;
-  color: white;
+  color: black;
   border-radius: 10px;
   border: none;
   transition: 0.3s all ease-out;
+  font-weight: 700;
 }
 
 .btn-buy,
 .btn-add {
-  background: #1e50ff;
+  background: gold;
 }
-
+#btn-add {
+  background-color: white;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
 .btn-buy,
 .btn-delete {
   width: 100%;
 }
 
 .btn-delete {
-  border: 2px solid  #1e50ff);
-  background-color:transparent;
+  color: white;
+  border: 2px solid #1e50ff;
+  background-color: transparent;
 }
 
 .btn-delete:hover {
@@ -1099,19 +874,19 @@ button i {
 }
 
 .disabled {
-  background-color: var(--text-gray);
+  background-color: gray;
   color: white;
   cursor: not-allowed;
   border: none;
 }
 .disabled:hover {
-  background-color: var(--text-gray);
+  background-color: gray;
   color: white;
   cursor: not-allowed;
   border: none;
 }
 
-.add-modal {
+/* .add-modal {
   padding: 15px 0px;
   display: flex;
   align-items: center;
@@ -1130,56 +905,40 @@ button i {
   transform: translateY(0);
   transition: all 0.5s ease-in;
 }
-
-@media (max-width: 1200px) {
-  .container_izq,
-  .container_central,
-  .container_derecho {
-    display: none;
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
   }
-  .menu__container {
-    display: flex;
-    flex-direction: row-reverse;
+  100% {
+    opacity: 1;
   }
-  .cont-menu {
-    display: block;
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
   }
-  .icono-menu {
-    display: flex;
-
-    position: relative;
-    z-index: 10;
+  100% {
+    opacity: 1;
   }
-
-  .icono-menu img {
-    vertical-align: top;
-    width: 40px;
-    cursor: pointer;
-  }
-
-  /* Estilos para el contenedor del Menú */
-  .cont-menu {
-    background-color: rgb(42, 42, 42);
-    box-shadow: 2px 0px 5px 2px rgb(66, 66, 66);
-    width: 400px;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: all 0.5s ease;
-  }
-
-  /* Estilos por agregar en JavaScript */
-  .active {
-    transform: translate(-600px);
-  }
-
-  /* Estilos para el listado del Menú */
-  .cont-menu ul {
-    display: flex;
-    flex-direction: column;
-    gap: 60px;
-    padding: 100px 0px 20px 0px;
-    list-style: none;
-  }
+} */
+.iconomenu-responsive {
+  display: none;
+}
+.cont-menu {
+  display: none;
+}
+.cart_container_total {
+  display: none;
+}
+.open-cart {
+  display: block;
+}
+#flecha_derecha {
+  padding: 15px;
+}
+#flecha_izquierda {
+  padding: 15px;
+}
+.presentacion {
+  display: none;
 }
