--- a/style.css
+++ b/style.css
@@ -693,7 +693,7 @@ button i {
 }
 
 .card-available::after {
-  content: "/////////";
+  content: "/////////////////////////////////";
   position: absolute;
   bottom: 0;
   left: 0;
